--- a/atomic-package/parts/_button.scss
+++ b/atomic-package/parts/_button.scss
@@ -22,13 +22,14 @@
   /* Module */
   &.primary {
     background: #404040;
-    //@include background(linear-gradient(top, #404040, #282828));
+    background: linear-gradient(top, #404040, #282828);
     &:hover { background: #303030; }
   }
   &.secondly {
     background: #EEEEEE;
-    //@include box-shadow(inset #E5E5E5 0 0 1px 1px);
-    //@include background(linear-gradient(top, #EEEEEE, #E5E5E5));
+    box-shadow: inset #E5E5E5 0 0 1px 1px;
+    box-shadow: inset #E5E5E5 0 0 1px 1px;
+    background(linear-gradient(top, #EEEEEE, #E5E5E5);
     > a,
     > input { color: #000000; }
     &:hover { background: #EAEAEA; }
