--- a/atomic-package/parts/_button.scss
+++ b/atomic-package/parts/_button.scss
@@ -15,13 +15,13 @@
     display: block;
     width: 100%;
     padding: 6px 12px;
-    background: #fff;
-    border: #e0e0e0 1px solid;
+    background: #F6F6F6;
+    border: #CBCBCB 1px solid;
     border-radius: 4px;
     box-sizing: border-box;
     text-align: center;
     text-decoration: none;
-    color: #333;
+    color: #666;
     cursor: pointer;
     font-size: 14px;
   }
@@ -30,48 +30,50 @@
   &.primary > a,
   &.primary > button,
   &.primary > input {
-    background: #404040;
-    background: linear-gradient(top, #404040, #282828);
+    background: #0099D4;
+    border: #008FC3 1px solid;
     color: #fff;
-    &:hover { background: #303030; }
+    //&:hover { background: #303030; }
   }
 
   &.secondly > a,
   &.secondly > button,
   &.secondly > input {
     background: #EEEEEE;
-    box-shadow: inset #E5E5E5 0 0 1px 1px;
-    background: linear-gradient(top, #EEEEEE, #E5E5E5);
+    border: #000 1px solid;
+    //box-shadow: inset #E5E5E5 0 0 1px 1px;
+    background: linear-gradient(top, #404040, #282828);
     color: #fff;
     > a,
     > input { color: #000000; }
-    &:hover { background: #EAEAEA; }
+    //&:hover { background: #EAEAEA; }
   }
 
   &.green > a,
   &.green > button,
   &.green > input {
-    background: #2A8000;
-    //@include background(linear-gradient(top, #2D8900, #246E00));
+    background: #81BA41;
+    border: #669433 1px solid;
     color: #fff;
-    &:hover { background: #267400; }
+    //&:hover { background: #267400; }
   }
 
   &.orange > a,
   &.orange > button,
   &.orange > input {
-    background: #FA9600;
-    //@include background(linear-gradient(top, #FFC70A, #FA9600));
+    background: #F0AD4E;
+    border: #E38D13 1px solid;
     color: #fff;
-    &:hover { background: #FCAE05; }
+    //&:hover { background: #FCAE05; }
   }
 
   &.red > a,
   &.red > button,
   &.red > input {
-    background: #FF0000;
+    background: #D52D47;
+    border: #B02B3E 1px solid;
     color: #fff;
-    &:hover { background: #FCAE05; }
+    //&:hover { background: #FCAE05; }
   }
 
   &.l { width: 260px; }
