--- a/atomic-package/parts/_button.scss
+++ b/atomic-package/parts/_button.scss
@@ -6,32 +6,85 @@
 .btn,
 .btn:not(a) {
   position: relative;
-  width: 80px;
+  display: inline-block;
+  min-width: 120px;
+  //width: 180px;
 
   /* Atomic */
   > a,
   > button,
   > input {
-    display: block;
+    display: inline-block;
     width: 100%;
-    padding: 6px 12px;
+    padding: 0 12px;
     background: #F6F6F6;
-    border: #CBCBCB 1px solid;
     border-radius: 4px;
+    border: none;
     box-sizing: border-box;
     text-align: center;
     text-decoration: none;
     color: #666;
     cursor: pointer;
     font-size: 14px;
+    line-height: 30px;
   }
+
+  &.ss {
+    min-width: 65px;
+    > a,
+    > button,
+    > input {
+      min-height: 20px;
+      padding: 0 6px;
+      line-height: 20px;
+      font-size: 11px;
+    }
+  }
+  &.small {
+    min-width: 90px;
+    > a,
+    > button,
+    > input {
+      min-height: 25px;
+      padding: 0 10px;
+      line-height: 25px;
+      font-size: 12px;
+    }
+  }
+  &.large {
+    min-width: 140px;
+    > a,
+    > button,
+    > input {
+      min-height: 40px;
+      padding: 0 15px;
+      border-radius: 6px;
+      line-height: 40px;
+      font-size: 15px;
+    }
+  }
+  &.ll {
+    min-width: 170px;
+    > a,
+    > button,
+    > input {
+      min-height: 50px;
+      padding: 0 15px;
+      border-radius: 6px;
+      line-height: 50px;
+      font-size: 15px;
+    }
+  }
+
+
 
   /* Skin */
   &.primary > a,
   &.primary > button,
   &.primary > input {
-    background: #0099D4;
-    border: #008FC3 1px solid;
+    background: #0BACD3;
+    border-right: 6px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
     color: #fff;
     //&:hover { background: #303030; }
   }
