--- a/atomic-package/base/_setting.scss
+++ b/atomic-package/base/_setting.scss
@@ -1,7 +1,7 @@
 $baseWidth: 1000px;
 $baseBgColor: #fff;
 $imgPath: "../img/ui/";
-$fontPath: "../img/fonts/";
+$fontPath: "../font/";
 
 $colorAqua: #0ff;
 
