refactor font family

--- a/atomic-package/base/_setting.scss
+++ b/atomic-package/base/_setting.scss
@@ -5,7 +5,7 @@ $fontPath: "../font/";
 
 $colorAqua: #0ff;
 
-$fontfamily: arial, "Hiragino Kaku Gothic Pro", sans-serif;
+$fontfamily: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
 $fontColorAqua: #0ff;
 
 $thumbnailWidth: 45px;
