--- a/atomic-package/base/_setting.scss
+++ b/atomic-package/base/_setting.scss
@@ -5,6 +5,8 @@ $fontPath: "../font/";
 
 $colorAqua: #0ff;
 
+$linkMainColor: #1397E1;
+
 $fontfamily: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
 $fontColorAqua: #0ff;
 
