--- a/atomic-package/parts/_modal.scss
+++ b/atomic-package/parts/_modal.scss
@@ -1,16 +1,27 @@
 
 .modalWindow {
-  display: none;
+  //display: none;
   position: fixed;
-  top: 100px;
-  left: 100px;
+  //top: 100px;
+  //left: 100px;
   width: 800px;
   min-height: 400px;
   background: #fff;
   z-index: 5000;
+  transition: all 0.15s ease-out;
+
   &.open {
     display: block;
   }
+  &.openStyle {
+    transform: scale(0.4);
+    opacity: 0.2;
+  }
+  &.anime {
+    transform: scale(1);
+    opacity: 1;
+  }
+
 }
 
 .modalWindowBackDrop {
