refactor scss & modal ts

--- a/atomic-package/base/_setting.scss
+++ b/atomic-package/base/_setting.scss
@@ -7,7 +7,10 @@ $colorAqua: #0ff;
 
 $linkMainColor: #1397E1;
 
-$fontfamily: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
+$fontFamily: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
+
+$fontMainColor: #3D3D3D;
+
 $fontColorAqua: #0ff;
 
 $thumbnailWidth: 45px;
