--- a/atomic-package/base/_base.scss
+++ b/atomic-package/base/_base.scss
@@ -6,12 +6,15 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  font-family: $fontfamily;
+  font-family: $fontFamily;
 }
+
 body {
   background: $baseBgColor;
   text-align: left;
+  color: $fontMainColor;
 }
+
 section {
   position: relative;
 }
