--- a/atomic-package/parts/_button.scss
+++ b/atomic-package/parts/_button.scss
@@ -8,13 +8,14 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   width: 100%;
   min-height: 30px;
   padding: 0 12px;
-  background: #F6F6F6;
+  background: #95A5A6;
   border-radius: 4px;
   border: none;
   box-sizing: border-box;
+  box-shadow: $btnShadow;
   text-align: center;
   text-decoration: none;
-  color: #666;
+  color: #fff;
   cursor: pointer;
   font-size: 14px;
   line-height: 28px;
@@ -23,33 +24,23 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
 
 /* Primary */
 @mixin primaryBtnStyle {
-  background: #0BACD3;
-  box-shadow: $btnShadow;
-  color: #fff;
-}
-
-@mixin secondlyBtnStyle {
-  background: #0BACD3;
-  box-shadow: $btnShadow;
-  color: #fff;
+  background: #2C3D50;
 }
 
 @mixin greenBtnStyle {
-  background: #81BA41;
-  box-shadow: $btnShadow;
-  color: #fff;
+  background: #17BC9C;
+}
+
+@mixin blueBtnStyle {
+  background: #3598DB;
 }
 
 @mixin orangeBtnStyle {
-  background: #F0AD4E;
-  box-shadow: $btnShadow;
-  color: #fff;
+  background: #F39C12;
 }
 
 @mixin redBtnStyle {
-  background: #D52D47;
-  box-shadow: $btnShadow;
-  color: #fff;
+  background: #E74C3C;
 }
 
 
@@ -124,12 +115,10 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
     //&:hover { background: #303030; }
   }
 
-  &.secondly > a,
-  &.secondly > button,
-  &.secondly > input {
-    background: #EEEEEE;
-    background: linear-gradient(top, #404040, #282828);
-    color: #fff;
+  &.blue > a,
+  &.blue > button,
+  &.blue > input {
+    @include blueBtnStyle;
     > a,
     > input { color: #000000; }
     //&:hover { background: #EAEAEA; }
@@ -184,14 +173,8 @@ input {
       //&:hover { background: #303030; }
     }
 
-    &.secondly {
-      background: #EEEEEE;
-      border: #000 1px solid;
-      //box-shadow: inset #E5E5E5 0 0 1px 1px;
-      background: linear-gradient(top, #404040, #282828);
-      color: #fff;
-      > a,
-      > input { color: #000000; }
+    &.blue {
+      @include blueBtnStyle;
       //&:hover { background: #EAEAEA; }
     }
 
@@ -235,10 +218,10 @@ input {
     }
 
     &.btn + .primary {
-      border-left: #0889a8 1px solid;
+      border-left: #233040 1px solid;
     }
-    &.btn + .secondly {
-      border-left: #0889a8 1px solid;
+    &.btn + .blue {
+      border-left: #0889A8 1px solid;
     }
     &.btn + .green {
       border-left: #40986c 1px solid;
