色など変更

--- a/atomic-package/parts/_button.scss
+++ b/atomic-package/parts/_button.scss
@@ -3,18 +3,32 @@
 */
 $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
 
+// size (width)
+$btnNarrow: 65px;
+$btnShort: 90px;
+$btnLong: 140px;
+$btnWide: 170px;
+$btnFree: 100%;
+
+// size (height)
+$btnLower: 20px;
+$btnLow: 25px;
+$btnHigh: 40px;
+$btnLofty: 50px;
+
 @mixin baseBtnStyle {
   display: inline-block;
   width: 100%;
   min-height: 30px;
   padding: 0 12px;
-  background: #F6F6F6;
+  background: #F9F9F9;
   border-radius: 4px;
   border: none;
   box-sizing: border-box;
+  box-shadow: $btnShadow;
   text-align: center;
   text-decoration: none;
-  color: #666;
+  color: #6A6A6A;
   cursor: pointer;
   font-size: 14px;
   line-height: 28px;
@@ -23,32 +37,27 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
 
 /* Primary */
 @mixin primaryBtnStyle {
-  background: #0BACD3;
-  box-shadow: $btnShadow;
-  color: #fff;
-}
-
-@mixin secondlyBtnStyle {
-  background: #0BACD3;
-  box-shadow: $btnShadow;
+  background: #2C3D50;
   color: #fff;
 }
 
 @mixin greenBtnStyle {
-  background: #81BA41;
-  box-shadow: $btnShadow;
+  background: #17BC9C;
+  color: #fff;
+}
+
+@mixin blueBtnStyle {
+  background: #3598DB;
   color: #fff;
 }
 
 @mixin orangeBtnStyle {
-  background: #F0AD4E;
-  box-shadow: $btnShadow;
+  background: #F39C12;
   color: #fff;
 }
 
 @mixin redBtnStyle {
-  background: #D52D47;
-  box-shadow: $btnShadow;
+  background: #E74C3C;
   color: #fff;
 }
 
@@ -69,49 +78,108 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
     @include baseBtnStyle;
   }
 
-  &.ss {
-    min-width: 65px;
+  /* State */
+  // size
+  &.mini {
+    min-width: $btnNarrow;
     > a,
     > button,
     > input {
-      min-height: 20px;
+      min-height: $btnLower;
       padding: 0 6px;
-      line-height: 20px;
+      line-height: $btnLower;
       font-size: 11px;
     }
   }
   &.small {
-    min-width: 90px;
+    min-width: $btnShort;
     > a,
     > button,
     > input {
-      min-height: 25px;
+      min-height: $btnLow;
       padding: 0 10px;
-      line-height: 25px;
+      line-height: $btnLow;
       font-size: 12px;
     }
   }
   &.large {
-    min-width: 140px;
+    min-width: $btnLong;
     > a,
     > button,
     > input {
-      min-height: 40px;
+      min-height: $btnHigh;
       padding: 0 15px;
       border-radius: 6px;
-      line-height: 40px;
+      line-height: $btnHigh;
       font-size: 15px;
     }
   }
-  &.ll {
-    min-width: 170px;
+  &.big {
+    min-width: $btnWide;
     > a,
     > button,
     > input {
-      min-height: 50px;
+      min-height: $btnLofty;
       padding: 0 15px;
       border-radius: 6px;
-      line-height: 50px;
+      line-height: $btnLofty;
+      font-size: 15px;
+    }
+  }
+
+  // width
+  &.narrow {
+    min-width: $btnNarrow;
+  }
+  &.short {
+    min-width: $btnShort;
+  }
+  &.long {
+    min-width: $btnLong;
+  }
+  &.wide {
+    min-width: $btnWide;
+  }
+  &.free {
+    min-width: $btnFree;
+  }
+
+  // height
+  &.lower {
+    > a,
+    > button,
+    > input {
+      min-height: $btnLower;
+      line-height: $btnLower;
+      font-size: 11px;
+    }
+  }
+  &.low {
+    > a,
+    > button,
+    > input {
+      min-height: $btnLow;
+      line-height: $btnLow;
+      font-size: 12px;
+    }
+  }
+  &.high {
+    > a,
+    > button,
+    > input {
+      min-height: $btnHigh;
+      border-radius: 6px;
+      line-height: $btnHigh;
+      font-size: 15px;
+    }
+  }
+  &.lofty {
+    > a,
+    > button,
+    > input {
+      min-height: $btnLofty;
+      border-radius: 6px;
+      line-height: $btnLofty;
       font-size: 15px;
     }
   }
@@ -124,12 +192,10 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
     //&:hover { background: #303030; }
   }
 
-  &.secondly > a,
-  &.secondly > button,
-  &.secondly > input {
-    background: #EEEEEE;
-    background: linear-gradient(top, #404040, #282828);
-    color: #fff;
+  &.blue > a,
+  &.blue > button,
+  &.blue > input {
+    @include blueBtnStyle;
     > a,
     > input { color: #000000; }
     //&:hover { background: #EAEAEA; }
@@ -155,8 +221,6 @@ $btnShadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
     @include redBtnStyle;
     //&:hover { background: #FCAE05; }
   }
-
-  &.l { width: 260px; }
 
   /* State */
   &.center { margin: 0 auto; }
@@ -184,14 +248,8 @@ input {
       //&:hover { background: #303030; }
     }
 
-    &.secondly {
-      background: #EEEEEE;
-      border: #000 1px solid;
-      //box-shadow: inset #E5E5E5 0 0 1px 1px;
-      background: linear-gradient(top, #404040, #282828);
-      color: #fff;
-      > a,
-      > input { color: #000000; }
+    &.blue {
+      @include blueBtnStyle;
       //&:hover { background: #EAEAEA; }
     }
 
@@ -235,10 +293,10 @@ input {
     }
 
     &.btn + .primary {
-      border-left: #0889a8 1px solid;
+      border-left: #233040 1px solid;
     }
-    &.btn + .secondly {
-      border-left: #0889a8 1px solid;
+    &.btn + .blue {
+      border-left: #0889A8 1px solid;
     }
     &.btn + .green {
       border-left: #40986c 1px solid;
