--- a/atomic-package/parts/_icon.scss
+++ b/atomic-package/parts/_icon.scss
@@ -18,14 +18,81 @@
 
 .icon {
   display: inline-block;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 1;
-  font-family: FontAwesome;
+//  font-weight: 400;
+//  font-style: normal;
+//  //line-height: 1;
+//  font-family: FontAwesome;
+
+  font: normal normal normal 14px/1 FontAwesome;
 
   // state
   &.round {
     @include iconBtnBaseStyle;
+  }
+
+  &.mini::before {
+    font-size: 10px;
+  }
+  &.small::before {
+    font-size: 12px;
+  }
+  &.large::before {
+    font-size: 16px;
+  }
+  &.xLarge::before {
+    font-size: 18px;
+  }
+  &.big::before {
+    font-size: 20px;
+  }
+
+  &.x2 {
+    font-size: 2em;
+  }
+  &.x3 {
+    font-size: 3em;
+  }
+  &.x4 {
+    font-size: 4em;
+  }
+  &.x5 {
+    font-size: 5em;
+  }
+
+    // skin
+  &.primary {
+    color: $colorPrimary;
+    &:hover {
+      color: #76828D;
+    }
+  }
+
+  &.green {
+    color: $colorGreen;
+    &:hover {
+      color: #69D3BF;
+    }
+  }
+
+  &.blue {
+    color: $colorBlue;
+    &:hover {
+      color: #7BBCE8;
+    }
+  }
+
+  &.orange {
+    color: $colorOrange;
+    &:hover {
+      color: #F7BF65;
+    }
+  }
+
+  &.red {
+    color: $colorRed;
+    &:hover {
+      color: #EF8B80;
+    }
   }
 
   // Adapted from http://fortawesome.github.com/Font-Awesome (Version 4.6.0)
