--- a/atomic-package/parts/_navigation_menu.scss
+++ b/atomic-package/parts/_navigation_menu.scss
@@ -137,8 +137,89 @@
   }
 
   // state
-  &.mini {}
-  &.small {}
-  &.large {}
-  &.big {}
+  &.mini {
+    > li {
+      min-width: 20px;
+      min-height: 20px;
+      a {
+        min-width: 20px;
+        min-height: 20px;
+        line-height: 20px;
+        font-size: 10px;
+      }
+    }
+  }
+  &.small {
+    > li {
+      min-width: 30px;
+      min-height: 30px;
+      a {
+        min-width: 30px;
+        min-height: 30px;
+        line-height: 30px;
+        font-size: 12px;
+      }
+    }
+  }
+  &.large {
+    > li {
+      min-width: 40px;
+      min-height: 40px;
+      a {
+        min-width: 40px;
+        min-height: 40px;
+        line-height: 40px;
+      }
+    }
+  }
+  &.big {
+    > li {
+      min-width: 50px;
+      min-height: 50px;
+      a {
+        min-width: 50px;
+        min-height: 50px;
+        line-height: 50px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+/*
+ * TabMenu
+*/
+.tabList {
+  > li {
+    display: inline-block;
+    box-sizing: border-box;
+    border-bottom: #E5E5E5 1px solid;
+
+    a {
+      display: block;
+      min-width: 80px;
+      min-height: 30px;
+      box-sizing: border-box;
+      padding: 0 6px;
+      line-height: 30px;
+      text-decoration: none;
+      text-align: center;
+    }
+
+    &.active {
+      border: #E5E5E5 1px solid;
+      border-bottom: none;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      a {
+        color: #666666;
+      }
+    }
+
+    &.disable {
+      a {
+        cursor: text;
+      }
+    }
+  }
 }
