--- a/atomic-package-docs/parts/_list.scss
+++ b/atomic-package-docs/parts/_list.scss
@@ -17,15 +17,24 @@
 
 .site-content {
   width: 1100px;
+  min-height: 600px;
   margin: 0 auto;
+  padding-top: 40px;
   &::after {
     content: "";
     display: block;
     clear: both;
+  }
+  .contents.docs {
+    margin-left: 250px;
   }
 }
 
 .sideMenu.docs {
   float: left;
   width: 250px;
+}
+
+.times.docs {
+  text-align: right;
 }
